fixed the product description overflowing and impacting the button negatively in the home page

--- a/pc_shop_frontend/src/components/ProductList/Product/Product.css
+++ b/pc_shop_frontend/src/components/ProductList/Product/Product.css
@@ -1,15 +1,14 @@
 .product-item {
-    /* Added to set a positioning context for the absolute positioning of .details-link */
     border: 1px solid #ccc;
-    /* border-radius: 5px; */
     overflow: hidden;
     background-color: #fff;
-    /* box-shadow: 10px 5px 5px red; */
     margin: 0px;
     width: 19%;
     padding: 25px;
     position: relative;
-    /* Added for positioning context */
+    display: flex;
+    flex-direction: column; /* Arrange children in a column */
+    height: 400px; /* Set a fixed height, adjust as needed */
 }
 
 .product-image {
@@ -18,7 +17,15 @@
 }
 
 .product-details {
+    overflow: hidden; 
+    text-overflow: 
+    ellipsis; 
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
     padding: 8px;
+    flex-grow: 1;
 }
 
 .product-name {
@@ -30,26 +37,20 @@
 .product-description {
     color: black;
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 .details-link {
     background-color: red;
     color: #fff;
-    border: none;
     padding: 8px 16px;
     cursor: pointer;
     font-size: 1.1em;
-    border-radius: 0px;
     text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
-    position: absolute;
-    /* Added to position the link absolutely */
-    bottom: 10px;
-    /* Adjust the bottom spacing as needed */
-    right: 10px;
-    /* Adjust the right spacing as needed */
-}
+    align-self: flex-end;
+    position: relative;
+    top: 20px;
+    left: 10px
 
-.details-link:hover {
-    background-color: black;
 }
