--- a/pc_shop_frontend/src/components/ProductList/ProductList.css
+++ b/pc_shop_frontend/src/components/ProductList/ProductList.css
@@ -1,4 +1,5 @@
 .product-list {
+    position: relative;
     list-style: none;
     padding: 0;
     display: flex;
